tests/snapshots/compiler_error_fixtures/adversarial__stage_all_errors__EffectBroken.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/adversarial/stage_all_errors/EffectBroken.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/compiler_errors/adversarial/stage_all_errors/EffectBroken.flx:3:9
  |
3 |         print("hi")
  |         ^^^^^
  |         ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
